--- a/index.html
+++ b/index.html
@@ -15,28 +15,39 @@
                 <button class="contact" style="border: none;background: none; outline: none; color: white; ">Contact
                     Us</button>
             </a>
-            <a href=""> <button class="help" style=" color: white;">Help</button></a>
+            <div class="navigation" style=" color: white;">Navigation
+                <div class="drop-content">
+                        <label for="search">
+                            <a href="#search">Search</a>
+                        </label>
+                       
+                    <a href="#row-two">For our products</a>
+                    <a href="#instagram">Follow us</a>
+                </div>
+            </div>
             <a href=""><button class="sign-in" style=" color: white; ">Sign In</button></a>
             <div class="logo">
-                <img src="./last.png" alt="" style="background-color: black; color: black; fill: black;">
+                <img src="./assets/last.png" alt="" style="background-color: black; color: black; fill: black;">
             </div>
+            a
         </header>
         <nav class="vid">
-            <video autoplay loop muted src="./Gravitי_ The New Cologne for Men from Particle.mp4" width="100%">
+            <video autoplay loop muted src="./assets/Gravitי_ The New Cologne for Men from Particle.mp4" width="100%">
 
             </video>
         </nav>
         <section class="nav">
+            <input type="search" id="search" placeholder="Search">
             <a class="men" href="">Men</a>
             <a class="women" href="">Women</a>
             <a class="unisex" href="">Unisex</a>
                 <div class="checkout">
                     <div class="arrow">
 
-                        <img src="arrow-right-svgrepo-com.svg"  alt="">
+                        <img src="./assets/arrow-right-svgrepo-com.svg"  alt="">
                     </div>
                     <a class="shop" href="">
-                        <img src="shopping-cart-svgrepo-com.svg" alt="" >
+                        <img src="./assets/shopping-cart-svgrepo-com.svg" alt="" >
                     </a>
                 </div>
         </section>
@@ -46,33 +57,33 @@
                 <h1 class="best-seller">Best Seller</h1>
             </div>
                 <div class="product one">
-                    <img class="img-product" src="perfumeOne.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/perfumeOne.webp" width="100%" alt="">
                     <a class="price-row-one" href=""  >Silver New formula - 125$</a>                    
                 </div>
                 <div class="product two">
-                    <img class="img-product" src="perfumeTwo.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/perfumeTwo.webp" width="100%" alt="">
                     <a class="price-row-one" href=""  >One-million - 125$</a> 
                     
                 </div>
                 <div class="product three">
-                    <img class="img-product" src="PerfumeThree.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/PerfumeThree.webp" width="100%" alt="">
                     <a class="price-row-one" href=""  >Silver scent 115$</a> 
                 </div>
             </div>
-            <div class="row-two">
+            <div id="row-two" class="row-two">
                 <div>
                 <h1 class="on-sale">On sale</h1>
             </div>
                 <div class="product four">
-                    <img class="img-product" src="Perfume4.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/Perfume4.webp" width="100%" alt="">
                     <a class="price-row-two" href=""  >Silver Infinite - 90$</a> 
                 </div>
                 <div class="product five">
-                    <img class="img-product" src="perfumefifth.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/perfumefifth.webp" width="100%" alt="">
                     <a class="price-row-two" href=""  >Bocart - 95$</a> 
                 </div>
                 <div class="product six">
-                    <img class="img-product" src="perfumeSix.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/perfumeSix.webp" width="100%" alt="">
                     <a class="price-row-two" href=""  >Cacscal Marbito - 80$</a> 
                 </div>
             </div>
@@ -81,28 +92,28 @@
                     <h1 class="other">Others</h1>
                 </div>
                 <div class="product seven">
-                    <img class="img-product" src="PerfumeSeven.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/PerfumeSeven.webp" width="100%" alt="">
                     <a class="price-row-three" href=""  >Instant home - 110$</a> 
                 </div>
                 <div class="product eight">
-                    <img class="img-product" src="PerfumeEight.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/PerfumeEight.webp" width="100%" alt="">
                     <a class="price-row-three" href=""  >Calvin Klein - 109$</a> 
                 </div>
                 <div class="product nine">
-                    <img class="img-product" src="pergumeNine.webp" width="100%" alt="">
+                    <img class="img-product" src="./assets/pergumeNine.webp" width="100%" alt="">
                     <a class="price-row-three" href=""  >Scandal - 150$</a> 
                 </div>
             </div>
         </main>
         <footer class="footer">
             <a class="whatsapp" href="" >
-                <img class="social" src="whatsapp-svgrepo-com.svg" width="100%" alt="">
+                <img class="social" src="./assets/whatsapp-svgrepo-com.svg" width="100%" alt="">
             </a>
-            <a class="instagram" href="" >
-                <img class="social" src="instagram-1-svgrepo-com.svg" width="100%" alt="">
+            <a class="instagram" id="instagram" href="" >
+                <img class="social" src="./assets/instagram-1-svgrepo-com.svg" width="100%" alt="">
             </a>
             <a class="facebook" href="" >
-                <img class="social" src="facebook-1-svgrepo-com.svg" width="100%"  alt="">
+                <img class="social" src="./assets/facebook-1-svgrepo-com.svg" width="100%"  alt="">
             </a>
         </footer>
     </div>
