added social media to landing page

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <h1 class="best-seller">Best Seller</h1>
             </div>
                 <div class="product one">
-                    <img class="img-product" src="./assets/perfumeOne.webp" width="100%" alt="">
-                    <a class="price-row-one" href=""  >Silver New formula - 125$</a>                    
+                    <a href="./productPage.html"><img class="img-product" src="./assets/perfumeOne.webp" width="100%" alt=""></a>
+                    <a class="price-row-one" href="./productPage.html"  >Silver New formula - 125$</a>                    
                 </div>
                 <div class="product two">
                     <img class="img-product" src="./assets/perfumeTwo.webp" width="100%" alt="">
