added product Page Three

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <a class="price-row-one" href="./productPage.html"  >Silver New formula - 125$</a>                    
                 </div>
                 <div class="product two">
-                    <img class="img-product" src="./assets/perfumeTwo.webp" width="100%" alt="">
-                    <a class="price-row-one" href=""  >One-million - 125$</a> 
-                    
+                    <a href="./productPageTwo.html"><img class="img-product" src="./assets/perfumeTwo.webp" width="100%" alt=""></a>                  
+                    <a class="price-row-one" href="./productPageTwo.html"  >One-million - 125$</a>                    
+
                 </div>
                 <div class="product three">
-                    <img class="img-product" src="./assets/PerfumeThree.webp" width="100%" alt="">
-                    <a class="price-row-one" href=""  >Silver scent 115$</a> 
+                    <a href="./productPageThree.html"><img class="img-product" src="./assets/PerfumeThree.webp" width="100%" alt=""></a>                     
+                    <a class="price-row-one" href="./productPageThree.html"  >Silver scent - 115$</a>                    
                 </div>
             </div>
             <div id="row-two" class="row-two">
