main style responsive

--- a/גיבוי/productPageTwo.html
+++ b/גיבוי/productPageTwo.html
@@ -15,10 +15,10 @@
                     <div class="social">
                         <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
                         <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 100%;" ></a>
+                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 220%;" ></a>
                     </div>
         <div class="grid">
-            
+
             <div class="left">
 
                 <div class="arrow">
@@ -38,10 +38,10 @@
                 <input type="radio" id="image3" name="image-switch" />
 
                 <div class="image-container">
-                    <img src="./assets/perfumeOne.webp" alt="Image 1" class="image image1" />
-                    <img src="./assets/perfumeOne2.png" alt="Image 2" class="image image2" />
-                    <img src="./assets/perfumeOne3.png" alt="Image 3" class="image image3" />
-                    <h3 class="brand">Silver New Formula</h3>
+                    <img src="./assets/perfumeTwo.webp" alt="Image 1" class="image image1" />
+                    <img src="./assets/oneMillion2.png" alt="Image 2" class="image image2" />
+                    <img src="./assets/ondmillion3.png" alt="Image 3" class="image image3" />
+                    <h3 class="brand">One-million</h3>
 
                 </div>
 
@@ -57,9 +57,6 @@
 
     </div>
     </div>
-
-
-
 
 </body>
 
