--- a/גיבוי/productPageThree.html
+++ b/גיבוי/productPageThree.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+!<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="productPage.css">
+    <link rel="stylesheet" href="productPageThree.css">
 </head>
 
 <body>
@@ -15,10 +15,10 @@
                     <div class="social">
                         <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
                         <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 100%;" ></a>
+                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 220%;" ></a>
                     </div>
         <div class="grid">
-            
+
             <div class="left">
 
                 <div class="arrow">
@@ -38,17 +38,17 @@
                 <input type="radio" id="image3" name="image-switch" />
 
                 <div class="image-container">
-                    <img src="./assets/perfumeOne.webp" alt="Image 1" class="image image1" />
-                    <img src="./assets/perfumeOne2.png" alt="Image 2" class="image image2" />
-                    <img src="./assets/perfumeOne3.png" alt="Image 3" class="image image3" />
-                    <h3 class="brand">Silver New Formula</h3>
+                    <img src="./assets/PerfumeThree.webp" alt="Image 1" class="image image1" />
+                    <img src="./assets/perfumeTwo2.png" alt="Image 2" class="image image2" />
+                    <img src="./assets/perfumeThree3.png" alt="Image 3" class="image image3" />
+                    <h3 class="brand">Silver scent</h3>
 
                 </div>
 
                 <div class="buttons">
-                    <label for="image1">One - 125$</label>
-                    <label for="image2">Two - 230$</label>
-                    <label for="image3">Three - 300$</label>
+                    <label for="image1">One - 115$</label>
+                    <label for="image2">Two - 220$</label>
+                    <label for="image3">Three - 260$</label>
                 </div>
             </div>
 
@@ -57,9 +57,6 @@
 
     </div>
     </div>
-
-
-
 
 </body>
 
