product-page-responsive

--- a/productPage.html
+++ b/productPage.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="back"> <a href="./index.html" type="_.blank"><button type="submit"
-                    style=" border-radius: 5px; background-color: antiquewhite; width: 159%;">Back</button></a></div>
+                 class="back-button">Back</button></a></div>
                     <div class="social">
                         <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
                         <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 100%;" ></a>
+                       <a class href=""><img class="whatsapp" src="./assets/whatsapp-svgrepo-com.svg" alt=""></a>
                     </div>
         <div class="grid">
             
