added productpageTwo responsive

--- a/productPageTwo.html
+++ b/productPageTwo.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="productPage.css">
+    <link rel="stylesheet" href="productPageTwo.css">
 </head>
 
 <body>
     <div class="container">
         <div class="back"> <a href="./index.html" type="_.blank"><button type="submit"
-                    style=" border-radius: 5px; background-color: antiquewhite; width: 159%;">Back</button></a></div>
-                    <div class="social">
-                        <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
-                        <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 220%;" ></a>
-                    </div>
+                    class="back-button">Back</button></a></div>
+        <div class="social">
+            <a href=""><img class="social-img" src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
+            <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
+            <a class href=""><img class="whatsapp" src="./assets/whatsapp-svgrepo-com.svg" alt=""></a>
+        </div>
         <div class="grid">
 
             <div class="left">
@@ -38,10 +38,13 @@
                 <input type="radio" id="image3" name="image-switch" />
 
                 <div class="image-container">
+
                     <img src="./assets/perfumeTwo.webp" alt="Image 1" class="image image1" />
                     <img src="./assets/oneMillion2.png" alt="Image 2" class="image image2" />
                     <img src="./assets/ondmillion3.png" alt="Image 3" class="image image3" />
                     <h3 class="brand">One-million</h3>
+
+
 
                 </div>
 
@@ -57,6 +60,9 @@
 
     </div>
     </div>
+
+
+
 
 </body>
 
