link between all pages including responsive update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             
         </header>
-        <nav class="vid">
+        <nav class="hero">
             <video autoplay loop muted src="./assets/Gravitי_ The New Cologne for Men from Particle.mp4" width="100%">
 
             </video>
