--- a/productPageThree.html
+++ b/productPageThree.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="back"> <a href="./index.html" type="_.blank"><button type="submit"
-                    style=" border-radius: 5px; background-color: antiquewhite; width: 159%;">Back</button></a></div>
-                    <div class="social">
-                        <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
-                        <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a href=""><img class="social-img" src="./assets/whatsapp-svgrepo-com.svg" alt="" style="width: 220%;" ></a>
-                    </div>
+                    class="back-button">Back</button></a></div>
+        <div class="social">
+            <a href=""><img class="social-img" src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
+            <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
+            <a class href=""><img class="whatsapp" src="./assets/whatsapp-svgrepo-com.svg" alt=""></a>
+        </div>
         <div class="grid">
 
             <div class="left">
@@ -38,17 +38,22 @@
                 <input type="radio" id="image3" name="image-switch" />
 
                 <div class="image-container">
-                    <img src="./assets/PerfumeThree.webp" alt="Image 1" class="image image1" />
-                    <img src="./assets/perfumeTwo2.png" alt="Image 2" class="image image2" />
-                    <img src="./assets/perfumeThree3.png" alt="Image 3" class="image image3" />
-                    <h3 class="brand">Silver scent</h3>
+
+                   
+                    
+<img src="./assets/PerfumeThree.webp" alt="Image 1" class="image image1" />
+<img src="./assets/perfumeTwo2.png" alt="Image 2" class="image image2" />
+<img src="./assets/perfumeThree3.png" alt="Image 3" class="image image3" />
+<h3 class="brand">Silver scent</h3>
+
+
 
                 </div>
 
                 <div class="buttons">
-                    <label for="image1">One - 115$</label>
-                    <label for="image2">Two - 220$</label>
-                    <label for="image3">Three - 260$</label>
+                    <label for="image1">One - 125$</label>
+                    <label for="image2">Two - 230$</label>
+                    <label for="image3">Three - 300$</label>
                 </div>
             </div>
 
@@ -57,6 +62,9 @@
 
     </div>
     </div>
+
+
+
 
 </body>
 
