added resrvist, text on video, and linkin of social media

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             
         </header>
         <nav class="hero">
+            <h1 class="video-text"> Best perfume website. </h1>
             <video autoplay loop muted src="./assets/Gravitי_ The New Cologne for Men from Particle.mp4" width="100%">
 
             </video>
@@ -106,16 +107,19 @@
             </div>
         </main>
         <footer class="footer">
-            <a class="whatsapp" href="" >
+            <a class="whatsapp" href="https://wa.me/972549504496 template" >
                 <img class="social" src="./assets/whatsapp-svgrepo-com.svg" width="100%" alt="">
             </a>
-            <a class="instagram" id="instagram" href="" >
+            <a class="instagram" id="instagram" href="https://www.instagram.com/danielgarmizo/profilecard/?igsh=Ymd5MHltZ3l2bzZn" >
                 <img class="social" src="./assets/instagram-1-svgrepo-com.svg" width="100%" alt="">
             </a>
-            <a class="facebook" href="" >
+            <a class="facebook" href="https://www.facebook.com/daniel.garmizo" >
                 <img class="social" src="./assets/facebook-1-svgrepo-com.svg" width="100%"  alt="">
             </a>
         </footer>
+        <div class="miluim">
+            <img src="./assets/soldier-svgrepo-com.svg" alt="">
+            20% discount for reservists
     </div>
 </body>
 
