--- a/productPage.html
+++ b/productPage.html
@@ -13,9 +13,9 @@
         <div class="back"> <a href="./index.html" type="_.blank"><button type="submit"
                  class="back-button">Back</button></a></div>
                     <div class="social">
-                        <a href=""><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
-                        <a href=""><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
-                       <a class href=""><img class="whatsapp" src="./assets/whatsapp-svgrepo-com.svg" alt=""></a>
+                        <a href="https://www.facebook.com/daniel.garmizo"><img class="social-img"  src="./assets/facebook-1-svgrepo-com.svg" alt=""></a>
+                        <a href="https://www.instagram.com/danielgarmizo/profilecard/?igsh=Ymd5MHltZ3l2bzZn"><img class="social-img" src="./assets/instagram-1-svgrepo-com.svg" alt=""></a>
+                       <a class href="https://wa.me/972549504496 template"><img class="whatsapp" src="./assets/whatsapp-svgrepo-com.svg" alt=""></a>
                     </div>
         <div class="grid">
             
